syntax = "proto3";
import "google/protobuf/any.proto";

option csharp_namespace = "Dolittle.Runtime.Events.Relativity";

package relativity;

service QuantumTunnelService {
    rpc Open(OpenTunnelMessage) returns (stream CommittedEventStreamParticleMessage) {}
}

message ArtifactMessage {
    bytes id = 1;
    int32 generation = 2;
}


message OpenTunnelMessage {
    bytes application = 1;
    bytes boundedContext = 2;
    uint64  offset = 3;
    repeated ArtifactMessage   events = 4;
}

message EventSourceVersionMessage {
    uint64 commit = 1;
    uint32 sequence = 2;
}

message VersionedEventSourceMessage {
    EventSourceVersionMessage   version = 1;
    bytes eventSource = 2;
    bytes artifact = 3;
} 

message EventMetadataMessage {
    VersionedEventSourceMessage source = 1;
    bytes correlationId = 2;
    ArtifactMessage artifact = 3;
    string causedBy = 4;
    int64 occurred = 5;
}

message EventParticleMessage {
    bytes id = 1;
    EventMetadataMessage metadata = 2;
    map<string, google.protobuf.Any> event = 3;
}


message CommittedEventStreamParticleMessage {
    bytes tenant = 1;
    VersionedEventSourceMessage source = 2;
    uint64 sequence = 3;
    bytes id = 4;
    int64 timeStamp = 5;
    bytes correlationId = 6;
    repeated EventParticleMessage events = 7;
}